### Added
- Native support for Thermo raw files (Windows, and Linux).
- Option to tag contaminant sequences with a prefix tag.

### Changed
- Improvements to the pipeline processing speed.
- Major code cleaning and refactoring.
- The pipeline protein inference is now calculated once for all data sets.

### Fixed
- Minor bugs and fixes.