@@ -75,8 +75,6 @@ func (c *MSFragger) Execute(params met.MSFragger, cmdArgs []string) {
 	}
 
 	_ = cmd.Wait()
-
-	return
 }
 
 // ExecutewithParameter is the main function to execute MSFragger
@@ -107,7 +105,6 @@ func (c *MSFragger) ExecutewithParameter(params met.MSFragger, cmdArgs []string)
 
 	_ = cmd.Wait()
 
-	return
 }
 
 func appendParams(params met.MSFragger) *exec.Cmd {
@@ -169,27 +166,29 @@ func appendParams(params met.MSFragger) *exec.Cmd {
 		"--write_calibrated_mgf",
 		fmt.Sprintf("%d", params.WriteCalibratedMGF),
 		"--decoy_prefix",
-		fmt.Sprintf("%s", params.DecoyPrefix),
+		params.DecoyPrefix,
 		"--deisotope",
 		fmt.Sprintf("%d", params.Deisotope),
+		"--deneutralloss",
+		fmt.Sprintf("%d", params.Deneutralloss),
 		"--isotope_error",
-		fmt.Sprintf("%s", params.IsotopeError),
+		params.IsotopeError,
 		"--mass_offsets",
-		fmt.Sprintf("%s", params.MassOffsets),
+		params.MassOffsets,
 		"--localize_delta_mass",
 		fmt.Sprintf("%d", params.LocalizeDeltaMass),
 		"--precursor_mass_mode",
-		fmt.Sprintf("%s", params.PrecursorMassMode),
-		//"--shifted_ions_exclude_ranges",
-		//fmt.Sprintf("%s", params.ShiftedIonsExcludeRanges),
+		params.PrecursorMassMode,
 		"--fragment_ion_series",
-		fmt.Sprintf("%s", params.FragmentIonSeries),
+		params.FragmentIonSeries,
+		"--ion_series_definitions",
+		params.IonSeriesDefinitions,
 		"--search_enzyme_name",
-		fmt.Sprintf("%s", params.SearchEnzymeName),
+		params.SearchEnzymeName,
 		"--search_enzyme_cutafter",
-		fmt.Sprintf("%s", params.SearchEnzymeCutafter),
+		params.SearchEnzymeCutafter,
 		"--search_enzyme_butnotafter",
-		fmt.Sprintf("%s", params.SearchEnzymeButNotAfter),
+		params.SearchEnzymeButNotAfter,
 		"--num_enzyme_termini",
 		fmt.Sprintf("%d", params.NumEnzymeTermini),
 		"--allowed_missed_cleavage",
@@ -197,13 +196,13 @@ func appendParams(params met.MSFragger) *exec.Cmd {
 		"--clip_nTerm_M",
 		fmt.Sprintf("%d", params.ClipNTermM),
 		"--variable_mod_01",
-		fmt.Sprintf("%s", params.VariableMod01),
+		params.VariableMod01,
 		"--variable_mod_02",
-		fmt.Sprintf("%s", params.VariableMod02),
+		params.VariableMod02,
 		"--variable_mod_03",
-		fmt.Sprintf("%s", params.VariableMod03),
+		params.VariableMod03,
 		"--variable_mod_04",
-		fmt.Sprintf("%s", params.VariableMod04),
+		params.VariableMod04,
 		"--allow_multiple_variable_mods_on_residue",
 		fmt.Sprintf("%d", params.AllowMultipleVariableModsOnResidue),
 		"--max_variable_mods_per_peptide",
@@ -211,9 +210,9 @@ func appendParams(params met.MSFragger) *exec.Cmd {
 		"--max_variable_mods_combinations",
 		fmt.Sprintf("%d", params.MaxVariableModsCombinations),
 		"--output_file_extension",
-		fmt.Sprintf("%s", params.OutputFileExtension),
+		params.OutputFileExtension,
 		"--output_format",
-		fmt.Sprintf("%s", params.OutputFormat),
+		params.OutputFormat,
 		"--output_report_topN",
 		fmt.Sprintf("%d", params.OutputReportTopN),
 		"--output_max_expect",
@@ -221,7 +220,7 @@ func appendParams(params met.MSFragger) *exec.Cmd {
 		"--report_alternative_proteins",
 		fmt.Sprintf("%d", params.ReportAlternativeProteins),
 		"--precursor_charge",
-		fmt.Sprintf("%s", params.PrecursorCharge),
+		params.PrecursorCharge,
 		"--override_charge",
 		fmt.Sprintf("%d", params.OverrideCharge),
 		"--digest_min_length",
@@ -229,7 +228,7 @@ func appendParams(params met.MSFragger) *exec.Cmd {
 		"--digest_max_length",
 		fmt.Sprintf("%d", params.DigestMaxLength),
 		"--digest_mass_range",
-		fmt.Sprintf("%s", params.DigestMassRange),
+		params.DigestMassRange,
 		"--max_fragment_charge",
 		fmt.Sprintf("%d", params.MaxFragmentCharge),
 		"--track_zero_topN",
@@ -251,25 +250,25 @@ func appendParams(params met.MSFragger) *exec.Cmd {
 		"--minimum_ratio",
 		fmt.Sprintf("%f", params.MinimumRatio),
 		"--clear_mz_range",
-		fmt.Sprintf("%s", params.ClearMzRange),
+		params.ClearMzRange,
 		"--remove_precursor_peak",
 		fmt.Sprintf("%d", params.RemovePrecursorPeak),
 		"--remove_precursor_range",
-		fmt.Sprintf("%s", params.RemovePrecursorRange),
+		params.RemovePrecursorRange,
 		"--intensity_transform",
 		fmt.Sprintf("%d", params.IntensityTransform),
 		"--mass_diff_to_variable_mod",
 		fmt.Sprintf("%d", params.MassDiffToVariableMod),
 		"--labile_search_mode",
-		fmt.Sprintf("%s", params.LabileSearchMode),
+		params.LabileSearchMode,
 		"--restrict_deltamass_to",
-		fmt.Sprintf("%s", params.RestrictDeltaMassTo),
+		params.RestrictDeltaMassTo,
 		"--diagnostic_intensity_filter",
 		fmt.Sprintf("%d", params.DiagnosticIntensityFilter),
 		"--Y_type_masses",
-		fmt.Sprintf("%s", params.YTypeMasses),
+		params.YTypeMasses,
 		"--diagnostic_fragments",
-		fmt.Sprintf("%s", params.DiagnosticFragments),
+		params.DiagnosticFragments,
 		"--add_Cterm_peptide",
 		fmt.Sprintf("%f", params.AddCtermPeptide),
 		"--add_Cterm_protein",
@@ -318,6 +317,8 @@ func appendParams(params met.MSFragger) *exec.Cmd {
 		fmt.Sprintf("%f", params.AddTryptophan),
 		"--add_Y_tyrosine",
 		fmt.Sprintf("%f", params.AddTyrosine),
+		//"--shifted_ions_exclude_ranges",
+		//fmt.Sprintf("%s", params.ShiftedIonsExcludeRanges),
 	)
 
 	return args
